# xy_list

./: .xy-codehub-ci.yml  MANIFEST.in  README.md  pyproject.toml
readme/: README.en.md  README.zh-hant.md  README_en.md  README_zh_CN.md  README_zh_TW.md
xy_list/: List.py  ModuleData.py  utils.py
xy_list/execute/: Main.py
