[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]

requires-python = ">=3.11.3"

name = "xy_list"

authors = [{ name = "余洋", email = "yuyangit.0515@qq.com" }]
description = "xy_list 模块"

dynamic = ["version"]

classifiers = ["Programming Language :: Python :: 3"]

dependencies = []

readme = "README.md"

[tool.setuptools.packages.find]
where = ["./"]
include = ["xy_list"]
namespaces = false

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { file = "VERSION" }
